[package]
name = "voterium_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
actix-web = "4.0"
actix-cors = "0.6"
base64 = "0.22"
dotenv = "0.15"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "sqlite", "macros"] }
uuid = { version = "1.2", features = ["v4"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
thiserror = "1.0"

[features]
default = ["sqlx/sqlite"]
