[package]
name = "voterium_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = "4.0"
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.9"
jsonwebtoken = "8"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "sqlite", "macros"] }
thiserror = "1.0"
uuid = { version = "1.2", features = ["v4"] }

[features]
default = ["sqlx/sqlite"]
